<?xml version="1.0" encoding="utf-8"?>
<LinearLayout



    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.projectquiz.MainActivity"
    android:background="@color/background"
    >


    <TextView
        style="@style/title"
        android:text="@string/project_name" />

    <TextView
        android:id="@+id/textView"
        style="@style/main_text"
        android:text="@string/project_description" />

    <Button
        android:id="@+id/go_button"
        style="@style/button"
        android:onClick="nextQuestion"
        android:text="@string/go_button" />
</LinearLayout>
